src/tests/cases/snapshots/bandwhich__tests__cases__ui__basic_only_connections.snap
---
source: src/tests/cases/ui.rs
expression: terminal_draw_events.lock().unwrap().join(SNAPSHOT_SECTION_SEPARATOR)
---
IF: interface_name | Total Rate (Up / Down): 0.00B / 0.00B                                                                                                                                    
âUtilization by connectionââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââ
âConnection                                                                                                           Process                                Rate (Up / Down)                â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
ââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââ
 Press <SPACE> to pause. Use <TAB> to rearrange tables. (DNS queries hidden).                                                                                                                 

